--- a/index.html
+++ b/index.html
@@ -2,44 +2,27 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>MediaPipe Object Detector — Mobile Módulo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Detector con caña de pescar</title>
   <style>
-    html,body {
-      height: 100%; margin: 0; background: #000; color: #fff;
-      font-family: system-ui,Segoe UI,Roboto,Helvetica,Arial;
+    html, body {
+      margin: 0; height: 100%; background: #000; color: #fff;
+      font-family: system-ui, sans-serif;
+      overflow: hidden;
     }
     .wrapper {
       position: relative;
-      width: 100%;
-      height: 100%;
+      width: 100vw; height: 100vh;
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
     video {
-      position: relative;
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      transform: scaleX(-1); /* espejo cámara frontal */
+      position: absolute; width: 100%; height: 100%; object-fit: contain;
+      /* No espejo */
     }
     canvas {
-      position: absolute;
-      left: 0; top: 0;
+      position: absolute; left: 0; top: 0;
       width: 100%; height: 100%;
       pointer-events: none;
-    }
-    #controls {
-      position: absolute; left: 8px; top: 8px; z-index: 20;
-    }
-    button {
-      padding: 8px 12px;
-      border-radius: 8px;
-      border: none;
-      background: #1a73e8;
-      color: white;
     }
   </style>
 </head>
@@ -47,15 +30,11 @@
   <div class="wrapper">
     <video id="video" playsinline autoplay muted></video>
     <canvas id="overlay"></canvas>
-    <div id="controls">
-      <button id="startBtn">Iniciar cámara</button>
-    </div>
   </div>
 
   <script type="module">
     import { FilesetResolver, ObjectDetector } from 'https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/vision_bundle.js';
 
-    const startBtn = document.getElementById('startBtn');
     const video = document.getElementById('video');
     const canvas = document.getElementById('overlay');
     const ctx = canvas.getContext('2d');
@@ -69,7 +48,8 @@
       );
       detector = await ObjectDetector.createFromOptions(vision, {
         baseOptions: {
-          modelAssetPath: 'https://storage.googleapis.com/mediapipe-tasks/object_detector/efficientdet_lite0_uint8.tflite'
+          modelAssetPath:
+            'https://storage.googleapis.com/mediapipe-tasks/object_detector/efficientdet_lite0_uint8.tflite'
         },
         scoreThreshold: 0.5,
         runningMode: 'VIDEO'
@@ -77,13 +57,22 @@
     }
 
     async function startCamera() {
-      const constraints = { video: { facingMode: { ideal: 'environment' } }, audio: false };
+      const constraints = {
+        video: {
+          facingMode: { ideal: 'environment' },
+          width: { ideal: 640 },
+          height: { ideal: 480 }
+        },
+        audio: false
+      };
       try {
         const stream = await navigator.mediaDevices.getUserMedia(constraints);
         video.srcObject = stream;
         await video.play();
-        resizeCanvasToVideo();
-        window.addEventListener('resize', resizeCanvasToVideo);
+
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+
         running = true;
         requestAnimationFrame(renderLoop);
       } catch (e) {
@@ -92,48 +81,73 @@
       }
     }
 
-    function resizeCanvasToVideo() {
-      const rect = video.getBoundingClientRect();
-      canvas.width = rect.width;
-      canvas.height = rect.height;
+    function drawFishingRod(xRod, yRod) {
+      // Dibuja la caña de pescar en posición fija abajo-centro
+      ctx.save();
+      ctx.lineWidth = 8;
+      ctx.strokeStyle = '#964B00'; // Marrón caña
+      ctx.lineCap = 'round';
+
+      // Caña curva simple
+      ctx.beginPath();
+      ctx.moveTo(xRod, yRod);
+      ctx.quadraticCurveTo(xRod - 50, yRod - 150, xRod - 30, yRod - 300);
+      ctx.stroke();
+
+      // Mango (parte inferior)
+      ctx.beginPath();
+      ctx.moveTo(xRod - 10, yRod);
+      ctx.lineTo(xRod + 10, yRod);
+      ctx.lineWidth = 12;
+      ctx.stroke();
+
+      ctx.restore();
     }
 
-    function drawBoxAndLine(bbox, label, score) {
-      const videoRect = video.getBoundingClientRect();
-      const scaleX = videoRect.width / video.videoWidth;
-      const scaleY = videoRect.height / video.videoHeight;
+    function drawFishingLine(xRod, yRod, xObj, yObj) {
+      // Dibuja el hilo con curva Bezier para que se vea “colgando”
+      ctx.save();
+      ctx.strokeStyle = 'rgba(255,255,255,0.8)';
+      ctx.lineWidth = 2;
+      ctx.lineCap = 'round';
 
-      const x = bbox.originX * scaleX;
-      const y = bbox.originY * scaleY;
-      const w = bbox.width * scaleX;
-      const h = bbox.height * scaleY;
+      // Control points para la curva
+      const cp1x = xRod - 20;
+      const cp1y = yRod - 150;
 
+      const cp2x = xObj + 20;
+      const cp2y = yObj - 150;
+
+      ctx.beginPath();
+      ctx.moveTo(xRod - 30, yRod - 300); // punta de la caña (final caña)
+      ctx.bezierCurveTo(cp1x, cp1y, cp2x, cp2y, xObj, yObj);
+      ctx.stroke();
+
+      ctx.restore();
+    }
+
+    function drawBoundingBoxAndFishingLine(bbox) {
+      // Dibuja caja y la caña con hilo hacia objeto
+      const x = bbox.originX;
+      const y = bbox.originY;
+      const w = bbox.width;
+      const h = bbox.height;
+
+      // Centro del objeto
       const cx = x + w / 2;
       const cy = y + h / 2;
 
-      const bottomCenterX = canvas.width / 2;
-      const bottomCenterY = canvas.height;
-
-      ctx.lineWidth = Math.max(2, Math.round(2 * (canvas.width / 360)));
+      // Dibujar caja
+      ctx.lineWidth = 2;
       ctx.strokeStyle = 'lime';
       ctx.strokeRect(x, y, w, h);
 
-      ctx.font = '18px sans-serif';
-      ctx.fillStyle = 'lime';
-      const text = `${label} ${Math.round(score * 100)}%`;
-      ctx.fillText(text, x + 4, y > 20 ? y - 6 : y + 18);
+      // Posición fija caña (abajo-centro)
+      const xRod = canvas.width / 2;
+      const yRod = canvas.height;
 
-      ctx.beginPath();
-      ctx.moveTo(cx, cy);
-      ctx.lineTo(bottomCenterX, bottomCenterY);
-      ctx.lineWidth = 3;
-      ctx.strokeStyle = 'rgba(255,0,0,0.95)';
-      ctx.stroke();
-
-      ctx.beginPath();
-      ctx.arc(bottomCenterX, bottomCenterY - 6, 6, 0, Math.PI * 2);
-      ctx.fillStyle = 'rgba(255,0,0,0.95)';
-      ctx.fill();
+      drawFishingRod(xRod, yRod);
+      drawFishingLine(xRod, yRod, cx, cy);
     }
 
     async function renderLoop() {
@@ -143,35 +157,23 @@
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
       try {
-        // Aquí sí se usa await porque detectForVideo es async
         const detections = await detector.detectForVideo(video, performance.now());
-        if (detections && detections.detections) {
-          for (const d of detections.detections) {
-            const cat = d.categories && d.categories[0] ? d.categories[0].categoryName : 'obj';
-            const score = d.categories && d.categories[0] ? d.categories[0].score : 0;
-            drawBoxAndLine(d.boundingBox, cat, score);
-          }
+        if (detections && detections.detections && detections.detections.length > 0) {
+          // Solo uno, el primero detectado
+          const d = detections.detections[0];
+          drawBoundingBoxAndFishingLine(d.boundingBox);
         }
       } catch (e) {
-        console.error('Detection error:', e);
+        console.error('Error en detección:', e);
       }
 
       requestAnimationFrame(renderLoop);
     }
 
-    startBtn.addEventListener('click', async () => {
-      startBtn.disabled = true;
-      startBtn.innerText = 'Inicializando...';
-      try {
-        if (!detector) await initDetector();
-        await startCamera();
-        startBtn.style.display = 'none';
-      } catch (e) {
-        console.error(e);
-        startBtn.disabled = false;
-        startBtn.innerText = 'Iniciar cámara';
-      }
-    });
+    (async () => {
+      await initDetector();
+      await startCamera();
+    })();
   </script>
 </body>
 </html>
